# mdown

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: rust.yml
resources/: err_codes.txt
resources/database/: data.json
src/: args.rs  build.rs  db.rs  download.rs  error.rs  getter.rs  gui.rs  macros.rs  main.rs  metadata.rs  music.rs  resolute.rs  server.rs  tutorial.rs  utils.rs  version_manager.rs  web.rs  zip_func.rs
