[package]
name = "mdown"
version = "0.15.4"
edition = "2021"
authors = ["GrenManSK <melnicek.richard@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/GrenManSK/mdown"
readme = "README.md"
description = "Mdown is a Rust-based manga downloader for Mangadex, featuring a CLI, GUI, and web interface. It supports configurable downloads, concurrent fetching, database management, and an integrated manga reader."
keywords = ["mangadex", "manga", "downloader"]

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bytefmt = "0.1.7"
bytes = "1.10.0"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
crosscurses = { version = "0.1.0", features = ["win32"] }
crossterm = "0.28.1"
ctrlc = { version = "3.4.5", optional = true }
eframe = { version = "0.30.0", optional = true }
egui = { version = "0.30.0", optional = true }
futures = "0.3.31"
gif = "0.13.1"
glob = "0.3.2"
if-addrs = { version = "0.13.3", optional = true }
image = { version = "0.25.5", optional = true }
lazy_static = "1.5.0"
parking_lot = "0.12.3"
percent-encoding = { version = "2.3.1", optional = true }
rand = "0.9.0"
regex = "1.11.1"
remove_dir_all = "1.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
rodio = { version = "0.20.1", optional = true }
rusqlite = { version = "0.33.0", features = ["bundled"] }
ryu = "1.0.19"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
smallvec = "1.13.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.4"
uuid = "1.12.1"
walkdir = "2.5.0"
webbrowser = { version = "1.0.3", optional = true }
zip = "0.6.6"


[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
h2 = "0.4.7"

[features]
default = ["web", "server"]
min = []
full = ["web", "gui", "server", "music"]
music = ["rodio"]
web = ["webbrowser", "ctrlc", "percent-encoding"]
server = ["webbrowser", "if-addrs", "percent-encoding", "ctrlc"]
gui = ["eframe", "egui", "image"]
